# homepage

./: .gitignore  Cargo.toml  LICENSE  README.br.md  README.md  astro.config.mjs  biome.json  flake.nix  index.html  input.css  justfile  mise.toml  package.json  pnpm-lock.yaml  schema.sql  script.js  styles.css  wrangler.jsonc
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: cloudflare-pages-release.yml  cloudfront-pages-release.yml  github-pages-release.yml
scripts/: chaos.js  companion.js  main.js  marquee.js  theme.js  xeyes.js
src/: lib.rs  main.rs
src/components/: header.rs  link.rs  marquee.rs  mod.rs  visitor.rs  xeyes.rs
src/components/apps/: CDPlayer.astro  Guestbook.astro  XEyes.astro
src/components/core/: BeButton.astro  BeWindow.astro
src/components/desktop/: Deskbar.astro  DesktopIcon.astro
src/components/windows/: AboutWindow.astro  CreditsWindow.astro  GuestbookWindow.astro  MusicWindow.astro  SocialsWindow.astro  StatsWindow.astro  TrashWindow.astro  XEyesWindow.astro
src/i18n/: ui.ts  utils.ts
src/layouts/: DesktopLayout.astro  Layout.astro
src/pages/: home.rs
src/pages/[...lang]/: index.astro
src/pages/api/: guestbook.ts  lastfm.ts  stats.ts
src/pages/api/music/: collection.ts
src/pages/api/music/album/[subdomain]/[type]/: [slug].ts
src/scripts/: clock.ts  drag.ts  panicMode.ts  windowManager.ts  xeyes.ts
src/styles/: global.css
