[package]
name = "homepage"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rand = "0.9.1"
web-sys = { version = "0.3.77", features = ["Window", "MouseEvent"] }
wasm-bindgen = "0.2.100"
